--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Solid App</title>
-  </head>
-  <body>
+
+    <title>PH Portal</title>
+
+    <!--begin::Fonts(mandatory for all pages)-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
+    <!--end::Fonts-->
+
+    <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
+    <link href="/src/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="/src/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <!--end::Global Stylesheets Bundle-->
+</head>
+<body id="kt_app_body" data-kt-app-header-fixed-mobile="true" data-kt-app-toolbar-enabled="true" class="app-default">
+    <!--begin::Theme mode setup on page load-->
+    <script>var defaultThemeMode = "light"; var themeMode; if ( document.documentElement ) { if ( document.documentElement.hasAttribute("data-theme-mode")) { themeMode = document.documentElement.getAttribute("data-theme-mode"); } else { if ( localStorage.getItem("data-theme") !== null ) { themeMode = localStorage.getItem("data-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-theme", themeMode); }</script>
+    <!--end::Theme mode setup on page load-->
+    <!--end::Theme mode setup on page load-->
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="kt_app_root" class="d-flex flex-column flex-root app-root"></div>
+
+    <script>var hostUrl = "/src/assets/";</script>
+
+    <!--begin::Global Javascript Bundle(mandatory for all pages)-->
+    <script src="/src/assets/plugins/global/plugins.bundle.js"></script>
+    <script src="/src/assets/js/scripts.bundle.js"></script>
+    <!--end::Global Javascript Bundle-->
 
     <script src="/src/index.tsx" type="module"></script>
-  </body>
+</body>
 </html>
