--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!--end::Fonts-->
 
     <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
-    <link href="/src/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="/src/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="/css/style.bundle.css" rel="stylesheet" type="text/css" />
     <!--end::Global Stylesheets Bundle-->
 </head>
 <body id="kt_app_body" data-kt-app-header-fixed-mobile="true" data-kt-app-toolbar-enabled="true" class="app-default">
@@ -29,8 +29,8 @@
     <script>var hostUrl = "/src/assets/";</script>
 
     <!--begin::Global Javascript Bundle(mandatory for all pages)-->
-    <script src="/src/assets/plugins/global/plugins.bundle.js"></script>
-    <script src="/src/assets/js/scripts.bundle.js"></script>
+    <script src="/plugins/global/plugins.bundle.js"></script>
+    <script src="/js/scripts.bundle.js"></script>
     <!--end::Global Javascript Bundle-->
 
     <script src="/src/index.tsx" type="module"></script>
