--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
 
     <title>PH Portal</title>
+    <link rel="shortcut icon" href="/favicon.png">
 
     <!--begin::Fonts(mandatory for all pages)-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
